remove api data

--- a/config/.env.example
+++ b/config/.env.example
@@ -20,6 +20,11 @@ export APP_DEFAULT_LOCALE="pl_PL"
 export APP_DEFAULT_TIMEZONE="Europe/Warsaw"
 export SECURITY_SALT="__SALT__"
 
+export GOOGLE_CLIENT_ID=""
+export GOOGLE_SECRET=""
+export FB_APP_ID=""
+export FB_SECRET=""
+
 # Uncomment these to define cache configuration via environment variables.
 #export CACHE_DURATION="+2 minutes"
 #export CACHE_DEFAULT_URL="file://tmp/cache/?prefix=${APP_NAME}_default&duration=${CACHE_DURATION}"
